# ftir-tools

./: .gitignore  BUILD.md  CLAUDE.md  README.md  build_exe.py  build_windows.bat  main.py  pyproject.toml  requirements-build.txt
.github/workflows/: main.yml
docs/: manual_zh_tw.md
modules/: __init__.py  baseline.py  data_processing.py  dialogs.py  file_converter.py  gui_components.py  plotting.py  reference_data.py  ui_helpers.py  version.py
