[project]
name = "ftir-tools"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jws2txt>=1.0.0",
    "matplotlib>=3.10.5",
    "olefile>=0.47",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "PyQt6>=6.5.0",
    "pyinstaller>=6.15.0",
    "pillow>=11.3.0",
]
